gke/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  # Define the Service name
  name: frontend-service
  labels:
    app: frontend
spec:
  # Scans for Pods that match its selector
  selector:
    app: frontend
  # Exposes the Service on a cluster-internal IP. 
  # Hence, this Service is only reachable from within the cluster. 
  type: ClusterIP
  ports:
    - name: frontend-http
      port: 3000
      protocol: TCP
      targetPort: frontend-http
